--- a/index.css
+++ b/index.css
@@ -85,6 +85,33 @@ body {
   /*align-items: baseline;*/
 }
 
+.flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  /*flex-wrap: nowrap;*/
+  /*flex-wrap: wrap-reverse;*/
+}
+
+/* Used additional to flex-wrap */
+/*.align-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: stretch;
+  align-content: flex-start;
+  align-content: flex-end;
+  align-content: center;
+  align-content: space-between;
+  align-content: space-around;
+}*/
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex-2 {
+  flex: 2;
+}
+
 .child1 {
   background-color: var(--clay);
   padding: 1%;
@@ -104,8 +131,31 @@ body {
   margin: 5%;
 }*/
 
-.set-width {
+.set-width-child {
   width: 15%;
+}
+
+.set-size-child {
+  width: 300px;
+  /*height: 100px;*/
+  margin: 10px;
+}
+
+.set-size-child-centered {
+  width: 300px;
+  /*height: 100px;*/
+  margin: auto;
+}
+
+.set-width-parent {
+  width: 60%;
+  border: 1px solid black;
+}
+
+.set-size-parent {
+  width: 60%;
+  height: 400px;
+  border: 1px solid black;
 }
 
 .set-height {
